# node-module-version-checker-rs

./: Cargo.toml  README.md  REAMDE.md  TODO.md  install.sh
src/: dependency_resolver.rs  diff.rs  extended_version_req.rs  main.rs  node_modules.rs  package.rs  package_data.rs  resolver.rs  tree_impl.rs  workspace_data.rs  workspace_resolver.rs
src/ptree_impl/: diff.rs  mod.rs  package.rs
tests/react-vite-2/: package.json
tests/strapi/: package.json  package.json.2
tests/workspace/: package.json
tests/workspace/app/: package.json
