[package]
name = "module-version-checker"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "mvc"
path = "src/main.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.4", features = ["derive"] }
semver = "1.0"
color-eyre = "0.6.4"
glob = "0.3.2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
colored = "3.0.0"
ptree = "0.5.2"
globset = "0.4.16"
